// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modelUtils addElement add end complex 1 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid",
      "new-end-element-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid:0-branch-guid",
    "isTerminal": true,
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "parent": "branch-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid:0-branch-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid:0-branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 1,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end complex 2 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "new-end-element-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid:0-branch-guid",
    "isTerminal": true,
    "label": "branch-guid",
    "nodeType": "branch",
    "parent": "branch-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid:0-branch-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 1,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "nodeType": "end",
    "parent": "branch-guid:0-branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with empty branches 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "new-end-element-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "childIndex": 0,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with with non-empty left branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": true,
    "next": "new-end-element-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "new-end-element-guid": Object {
    "guid": "new-end-element-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils addElement add end node to left branch of decision with with non-empty right branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "new-end-element-guid",
      "branch-guid:1-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": true,
    "next": "end-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:1-head-guid",
  },
  "new-end-element-guid": Object {
    "childIndex": 0,
    "guid": "new-end-element-guid",
    "isTerminal": true,
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils addFault adds a fault to an element 1`] = `
Object {
  "end-hook-guid": Object {
    "childIndex": -1,
    "guid": "end-hook-guid",
    "isTerminal": true,
    "next": null,
    "nodeType": "end",
    "parent": "faulting-element-guid",
    "prev": null,
  },
  "faulting-element-guid": Object {
    "fault": "end-hook-guid",
    "guid": "faulting-element-guid",
  },
}
`;

exports[`modelUtils connectToElement reconnects to an element on another branch 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      null,
      "branch-guid:1-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "branch-guid:1-random-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:1-end2-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:1-end2-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:1-random-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "next": "branch-guid:1-end2-guid",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils connectToElement reconnects to the merge element 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head-guid",
      "branch-guid:1-head-guid",
      "branch-guid:2-head-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-head-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head-guid",
    "isTerminal": false,
    "next": null,
    "parent": "branch-guid",
  },
  "branch-guid:1-head-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head-guid",
    "isTerminal": false,
    "next": "branch-guid:1-random-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "prev": "branch-guid:1-head-guid",
  },
  "branch-guid:2-head-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:2-head-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils deleteElement delete nested decision with end elements and reconnect 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "branch-guid:1-end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "branch-guid:1-end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:1-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils deleteElement delete nested decision with end elements and reconnect 2`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      null,
      null,
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "branch-guid:1-end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:1-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:1-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils deleteElement deletes branch head element 1`] = `
Object {
  "branching-element": Object {
    "children": Array [
      null,
      null,
    ],
    "guid": "branching-element",
    "next": "merge-element",
    "prev": null,
  },
  "merge-element": Object {
    "guid": "merge-element",
    "next": null,
    "prev": "branching-element",
  },
}
`;

exports[`modelUtils deleteElement deletes branching element that supports a fault branch as well 1`] = `
Object {
  "branch-head-one": Object {
    "guid": "branch-head-one",
    "next": "merge-element",
    "prev": "screen-element",
  },
  "merge-element": Object {
    "elementType": "END_ELEMENT",
    "guid": "merge-element",
    "next": null,
    "nodeType": "end",
    "prev": "branch-head-one",
  },
  "screen-element": Object {
    "guid": "screen-element",
    "isTerminal": true,
    "next": "branch-head-one",
    "prev": null,
  },
}
`;

exports[`modelUtils deleteElement deletes fully terminated branch element in main flow 1`] = `
Object {
  "end-hook-guid": Object {
    "guid": "end-hook-guid",
    "next": null,
    "nodeType": "end",
    "prev": "first-element",
  },
  "first-element": Object {
    "guid": "first-element",
    "isTerminal": true,
    "next": "end-hook-guid",
    "prev": null,
  },
}
`;

exports[`modelUtils deleteElement deletes fully terminated branchHead element in another branch 1`] = `
Object {
  "end-hook-guid": Object {
    "childIndex": 0,
    "guid": "end-hook-guid",
    "isTerminal": true,
    "next": null,
    "nodeType": "end",
    "parent": "inline-element",
  },
  "first-element": Object {
    "guid": "first-element",
    "next": "inline-element",
    "prev": null,
  },
  "inline-element": Object {
    "children": Array [
      "end-hook-guid",
      null,
    ],
    "guid": "inline-element",
    "next": "last-element",
    "prev": "first-element",
  },
  "last-element": Object {
    "guid": "last-element",
    "next": null,
    "prev": "inline-element",
  },
}
`;

exports[`modelUtils deleteElement deletes inline element 1`] = `
Object {
  "first-element": Object {
    "guid": "first-element",
    "isTerminal": false,
    "next": "last-element",
    "prev": null,
  },
  "last-element": Object {
    "guid": "last-element",
    "next": null,
    "prev": "first-element",
  },
}
`;

exports[`modelUtils deleteElement deletes loop element nested in a decision 1`] = `
Object {
  "decision-element": Object {
    "children": Array [
      null,
      "screen-element",
    ],
    "guid": "decision-element",
    "next": "last-element",
    "prev": "first-element",
  },
  "first-element": Object {
    "guid": "first-element",
    "next": "decision-element",
    "prev": null,
  },
  "last-element": Object {
    "guid": "last-element",
    "next": null,
    "prev": "decision-element",
  },
  "screen-element": Object {
    "childIndex": 1,
    "guid": "screen-element",
    "isTerminal": false,
    "next": null,
    "parent": "decision-element",
    "prev": null,
  },
}
`;

exports[`modelUtils deleteElement in nested branch with ended left branch inlines 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
      "end-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-branch-guid:0-branch-guid:0-end-guid": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-branch-guid:0-branch-guid:0-end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "end-guid": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
    "prev": null,
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils deleteElement persisting a terminated branch that has a regular element and an end element 1`] = `
Object {
  "branch-head-one": Object {
    "guid": "branch-head-one",
    "next": "last-element",
    "prev": "first-element",
  },
  "first-element": Object {
    "guid": "first-element",
    "isTerminal": false,
    "next": "branch-head-one",
    "prev": null,
  },
  "last-element": Object {
    "guid": "last-element",
    "next": null,
    "prev": "branch-head-one",
  },
}
`;

exports[`modelUtils deleteElement persisting a terminated branch that has end element as branch head 1`] = `
Object {
  "first-element": Object {
    "guid": "first-element",
    "isTerminal": false,
    "next": "last-element",
    "prev": null,
  },
  "last-element": Object {
    "guid": "last-element",
    "next": null,
    "prev": "first-element",
  },
}
`;

exports[`modelUtils initFlowModel creates a root and links start and end 1`] = `
Object {
  "end-guid": Object {
    "guid": "end-guid",
    "nodeType": "end",
    "prev": "start-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "label": "root",
    "name": "root",
    "next": null,
    "nodeType": "root",
    "prev": null,
    "text": "root",
    "value": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "guid": "start-guid",
    "isTerminal": true,
    "next": "end-guid",
    "nodeType": "start",
    "parent": "root",
    "prev": null,
  },
}
`;

exports[`modelUtils updateChildren deletes branch elements when removing a child 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head1-guid",
      "branch-guid:2-head3-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end-guid",
    "parent": "branch-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": true,
    "next": "end-guid",
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:2-head3-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren handles new empty branch in left-most position 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      null,
      "branch-guid:0-head1-guid",
      "branch-guid:1-head2-guid",
      "branch-guid:2-head3-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-head2-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:1-head2-guid",
    "isTerminal": false,
    "next": "branch-guid:1-random-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "prev": "branch-guid:1-head2-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 3,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren handles new empty branch in right-most position 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head1-guid",
      "branch-guid:1-head2-guid",
      "branch-guid:2-head3-guid",
      null,
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-head2-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:1-head2-guid",
    "isTerminal": false,
    "next": "branch-guid:1-random-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "prev": "branch-guid:1-head2-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren reorders the children 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:1-head2-guid",
      "branch-guid:2-head3-guid",
      "branch-guid:0-head1-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-head2-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:1-head2-guid",
    "isTerminal": false,
    "next": "branch-guid:1-random-guid",
    "parent": "branch-guid",
  },
  "branch-guid:1-random-guid": Object {
    "guid": "branch-guid:1-random-guid",
    "prev": "branch-guid:1-head2-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren reorders the children of parent with null children 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:2-head3-guid",
      "branch-guid:0-head1-guid",
      null,
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end-guid",
    "parent": "branch-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren reorders, removes and adds child 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      null,
      "branch-guid:2-head3-guid",
      "branch-guid:0-head1-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": "end-guid",
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 2,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end-guid",
    "parent": "branch-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": false,
    "parent": "branch-guid",
  },
  "end-guid": Object {
    "elementType": "END_ELEMENT",
    "guid": "end-guid",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren when all branches terminals after the update, delete the parent next and decendents 1`] = `
Object {
  "branch-guid": Object {
    "children": Array [
      "branch-guid:0-head1-guid",
      "branch-guid:2-head3-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "prev": "start-guid",
  },
  "branch-guid:0-end1": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end1",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:0-head1-guid",
  },
  "branch-guid:0-head1-guid": Object {
    "childIndex": 0,
    "guid": "branch-guid:0-head1-guid",
    "isTerminal": true,
    "next": "branch-guid:0-end1",
    "parent": "branch-guid",
  },
  "branch-guid:2-end2": Object {
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:2-end2",
    "label": "end-guid",
    "nodeType": "end",
    "prev": "branch-guid:2-head3-guid",
  },
  "branch-guid:2-head3-guid": Object {
    "childIndex": 1,
    "guid": "branch-guid:2-head3-guid",
    "isTerminal": true,
    "next": "branch-guid:2-end2",
    "parent": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "start-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
  "start-guid": Object {
    "childIndex": 0,
    "elementType": "start",
    "guid": "start-guid",
    "isTerminal": true,
    "label": "start-guid",
    "next": "branch-guid",
    "nodeType": "start",
    "parent": "root",
  },
}
`;

exports[`modelUtils updateChildren when parent has all terminals, creates end nodes for new branches 1`] = `
Object {
  "branch-guid": Object {
    "childIndex": 0,
    "children": Array [
      "branch-guid:0-end1",
      "branch-guid:1-end2",
      "end-hook-guid",
    ],
    "defaultConnectorLabel": "Default Connector Label",
    "elementType": "branch",
    "guid": "branch-guid",
    "isTerminal": true,
    "label": "branch-guid",
    "next": null,
    "nodeType": "branch",
    "parent": "root",
  },
  "branch-guid:0-end1": Object {
    "childIndex": 0,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:0-end1",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
  },
  "branch-guid:1-end2": Object {
    "childIndex": 1,
    "elementType": "END_ELEMENT",
    "guid": "branch-guid:1-end2",
    "isTerminal": true,
    "label": "end-guid",
    "nodeType": "end",
    "parent": "branch-guid",
  },
  "end-hook-guid": Object {
    "childIndex": 2,
    "guid": "end-hook-guid",
    "isTerminal": true,
    "nodeType": "end",
    "parent": "branch-guid",
  },
  "root": Object {
    "children": Array [
      "branch-guid",
    ],
    "elementType": "root",
    "guid": "root",
    "nodeType": "root",
  },
}
`;
